# astro-vue-tailwind-jwt-template

./: .env.example  .prettierignore  .prettierrc.cjs  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  check.yaml  style.yaml
public/: serviceWorker.js  site.webmanifest
script/: moveBinary.js  moveServiceWorker.js
src/: env.d.ts  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: LayoutCommon.astro  NavBarSidebar.astro  SideBar.astro  constants.ts
src/components/: ColorModeSwitcher.astro  CopyrightNotice.astro  ErrorMaintenance.astro  ErrorNotFound.astro  ErrorServer.astro  FormForgotPassword.astro  FormResetPassword.astro  FormSignIn.astro  FormSignIn.vue  FormSignUp.astro  FormSignUp.vue  Logout.vue  SearchInput.astro  UserSettings.astro
src/components/base/: alert.vue  button.vue  input.vue  label.vue
src/layouts/: FooterSidebar.astro  LayoutCommon.astro  LayoutSidebar.astro  NavBarSidebar.astro  SideBar.astro
src/lib/: constants.ts  data.ts  helpers.ts  types.ts
src/middleware/: auth.ts  index.ts  user.ts
src/modules/: ErrorMaintenance.astro  ErrorNotFound.astro  ErrorServer.astro  FormForgotPassword.astro  FormResetPassword.astro  FormSignIn.astro  FormSignUp.astro  UserSettings.astro
src/pages/: 404.astro  500.astro  index.astro  maintenance.astro
src/pages/auth/: forgot-password.astro  login.astro  logout.ts  register.astro  reset-password.astro
(+4 files in other folders)
