[package]
name = "uncomplicated"
version = "0.0.1"
description = "An Uncomplicated App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = ["codegen"] }

[dependencies]
tauri = { version = "1.4", features = ["process-command-api", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
